Bug 328066 - Wrong doc assignment on python import
Summary: Wrong doc assignment on python import
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-25 15:09 UTC by Ralf Habacker
Modified: 2013-11-25 15:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:


Attachments
test case (210 bytes, text/x-python)
2013-11-25 15:12 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2013-11-25 15:09:25 UTC
Importing the appended python file fails to assign the doc to the correct namespace. The class comment is assigned to the first function and all other doc's are ignored. 


Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. import appended python file
3.
Actual Results:  
The class comment is assigned to the first function and all other doc's are ignored. 


Expected Results:  
The class doc should be assigned to the class and the method doc to the related method
Comment 1 Ralf Habacker 2013-11-25 15:12:10 UTC
Created attachment 83755 [details]
test case
Comment 2 Ralf Habacker 2013-11-25 15:16:25 UTC
Git commit e394b5a668be5e21bd38f06c1d313c0615e4900f by Ralf Habacker.
Committed on 25/11/2013 at 15:04.
Pushed by habacker into branch 'KDE/4.11'.

Fix import of python import with multi line comments after declarations.
FIXED-IN:4.11.4

M  +1    -1    umbrello/codeimport/nativeimportbase.cpp
M  +11   -0    umbrello/codeimport/pythonimport.cpp

http://commits.kde.org/umbrello/e394b5a668be5e21bd38f06c1d313c0615e4900f
Comment 3 Ralf Habacker 2013-11-25 15:21:36 UTC
Git commit d94cdcb4e3e4e5c92adfc85b70423c21f04f764a by Ralf Habacker.
Committed on 25/11/2013 at 15:04.
Pushed by habacker into branch 'KDE/4.12'.

Fix import of python import with multi line comments after declarations.
FIXED-IN:4.11.4
(cherry picked from commit e394b5a668be5e21bd38f06c1d313c0615e4900f)

M  +1    -1    umbrello/codeimport/nativeimportbase.cpp
M  +11   -0    umbrello/codeimport/pythonimport.cpp

http://commits.kde.org/umbrello/d94cdcb4e3e4e5c92adfc85b70423c21f04f764a
Comment 4 Ralf Habacker 2013-11-25 15:30:50 UTC
Git commit aca328edc09662b16b8cfda0036d722a18c73681 by Ralf Habacker.
Committed on 25/11/2013 at 15:04.
Pushed by habacker into branch 'master'.

Fix import of python import with multi line comments after declarations.
FIXED-IN:4.11.4
(cherry picked from commit e394b5a668be5e21bd38f06c1d313c0615e4900f)

M  +1    -1    umbrello/codeimport/nativeimportbase.cpp
M  +11   -0    umbrello/codeimport/pythonimport.cpp

http://commits.kde.org/umbrello/aca328edc09662b16b8cfda0036d722a18c73681