Fix import of python import with multi line comments after declarations.

BUG:328066
FIXED-IN:4.11.4
(cherry picked from commit e394b5a668be5e21bd38f06c1d313c0615e4900f)